[package]
authors = ["hatoo <hato2000@gmail.com>"]
categories = ["macros"]
name = "flat_vec"
version = "0.1.0"
edition = "2021"
description = "flat_vec provides a macro to flatten nested Vecs. Particularly useful when you want to write a rules of egg which contains rules both => and <=>."
keywords = ["egg", "macro"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/hatoo/flat_vec"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
